<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ConcurrentExecutionTabFragment">

    <LinearLayout
        android:id="@+id/videoEncodeSpinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/encodeButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/encodeButton1"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/encode_button_text_1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/encodeButton2"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/encode_button_text_2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/encodeButton3"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/encode_button_text_3"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton1"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/cancel_button_text_1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButton2"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/cancel_button_text_2"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButton3"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/cancel_button_text_3"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancelButtonAll"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/cancel_button_text_all"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/outputText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_output_frame"
        android:fontFamily="sans-serif"
        android:gravity="bottom"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:typeface="sans"
        tools:targetApi="jelly_bean" />
</LinearLayout>